# LoopieEngine

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Loopie/: CMakeLists.txt
Loopie/src/Loopie/Core/: Application.cpp  Application.h  Assert.h  ImGuiManager.cpp  ImGuiManager.h  Log.cpp  Log.h  Module.cpp  Module.h  PlatformChecker.h  Random.h  Window.cpp  Window.h
Loopie/src/Loopie/Files/: DirectoryManager.cpp  DirectoryManager.h  FileDialog.cpp  FileDialog.h
Loopie/src/Loopie/ImGui/: ImGuiManager.cpp  ImGuiManager.h
Loopie/src/Loopie/Project/: Project.cpp  Project.h
LoopieEditor/: CMakeLists.txt
LoopieEditor/src/: EditorApplication.cpp  main.cpp
scripts/: VS-Windows_Generator.bat
